--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: price-hunter-backend
     runtime: python
     plan: free
-    buildCommand: pip install -r requirements.txt && playwright install chromium
+    rootDirectory: backend
+    buildCommand: pip install -r requirements.txt && playwright install --with-deps chromium
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: FIREBASE_CREDENTIALS_JSON
