--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,8 @@ services:
     name: price-hunter-backend
     runtime: python
     plan: free
-    rootDirectory: backend
-    buildCommand: pip install -r requirements.txt && playwright install --with-deps chromium
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: cd backend && pip install -r requirements.txt && playwright install --with-deps chromium
+    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: FIREBASE_CREDENTIALS_JSON
         sync: false
