--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: price-hunter-backend
     runtime: python
     plan: free
-    buildCommand: cd backend && pip install -r requirements.txt && playwright install --with-deps chromium
-    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: cd backend && pip install -r requirements.txt
+    startCommand: cd backend && python -m playwright install --with-deps chromium && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: FIREBASE_CREDENTIALS_JSON
         sync: false
       - key: PORT
         generateValue: true
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/.cache/ms-playwright
