--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ venv/
 ServiceAccountPriceHunterMx.json
 .env
 .env.local
+
+# Environment files with secrets (GitHub token)
+frontend/src/environments/environment.ts
+src/environments/environment.ts
