feat: arquitectura simplificada sin backend + scraping cada 4 horas
- Eliminado backend de Render (problemas de RAM)
- GitHub Actions ahora corre 6 veces al día (cada 4 horas)
- Botón 'Actualizar Ahora' llama directamente a GitHub API
- GitHub token en frontend (aceptable para proyecto personal)
- Environment.ts en .gitignore para proteger token
- Documentación actualizada con arquitectura sin backend

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,10 +2,13 @@ name: Daily Price Scraper
 
 on:
   schedule:
-    # Ejecutar a las 8:00 AM y 8:00 PM (UTC) todos los días
-    # Puedes ajustar la hora (UTC es +6 horas vs CDMX aprox)
-    - cron: '0 14 * * *' # 8 AM CDMX
-    - cron: '0 2 * * *'  # 8 PM CDMX
+    # Ejecutar cada 4 horas (6 veces al día)
+    - cron: '0 0 * * *'   # 00:00 UTC (6:00 PM CDMX del día anterior)
+    - cron: '0 4 * * *'   # 04:00 UTC (10:00 PM CDMX del día anterior)
+    - cron: '0 8 * * *'   # 08:00 UTC (2:00 AM CDMX)
+    - cron: '0 12 * * *'  # 12:00 UTC (6:00 AM CDMX)
+    - cron: '0 16 * * *'  # 16:00 UTC (10:00 AM CDMX)
+    - cron: '0 20 * * *'  # 20:00 UTC (2:00 PM CDMX)
   workflow_dispatch: # Permite correrlo manual con un botón
 
 jobs:
