--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ venv/
 ServiceAccountPriceHunterMx.json
 .env
 .env.local
+
+# Environment con GitHub token
+frontend/src/environments/environment.ts
