--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,9 +1,9 @@
-name: Price Scraper (Every 2 hours)
+name: Price Scraper (Every 30 min)
 
 on:
   schedule:
-    # Ejecutar cada 2 horas (12 veces al día) - evita rate limiting
-    - cron: '0 */2 * * *'
+    # Ejecutar cada 30 minutos (48 veces al día)
+    - cron: '0,30 * * * *'
   workflow_dispatch: # Permite correrlo manual con un botón
 
 jobs:
